b=95339 Check the aPrintOptions for null.  Fixes embedding silent.  r=rods sr=attinasi